--- a/supervisord.sample.conf
+++ b/supervisord.sample.conf
@@ -39,3 +39,23 @@ autostart=true
 autorestart=true
 user=vevc
 
+[program:nginx]
+command=/usr/sbin/nginx -g "daemon off;"
+autostart=true
+autorestart=true
+priority=20
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+
+[program:php-fpm]
+# 核心改动：启动 php8.1-fpm
+command=/usr/sbin/php-fpm8.1 -F
+autostart=true
+autorestart=true
+priority=30
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
